--- a/Intro.html
+++ b/Intro.html
@@ -90,9 +90,14 @@
 </head>
 <body>
 
-<!-- Splash Screen -->
 <div id="splash">
-  🌍 Welcome to Green Heroes
+ <div style="margin-bottom:40px;">🌍 Welcome to Green Heroes</div>
+<div style="margin-top:20px; font-size:30px; font-weight:bold; text-align:center; color:lightyellow;">
+  YOU KNOW YOU CAN BE THE HERO SAVING THIS WORLD!!
+</div>
+  <button class="btn" style="width:auto; padding:12px 24px; margin-top:30px;" onclick="enterSite()">
+Click here
+  </button>
 </div>
 
 <main id="mainContent">
@@ -144,15 +149,12 @@
 </main>
 
 <script>
-  // Show splash screen for 3 seconds, then reveal main content
-  window.addEventListener('load', () => {
-    setTimeout(() => {
-      const splash = document.getElementById('splash');
-      splash.style.opacity = '0';
-      setTimeout(() => { splash.style.display = 'none'; }, 1000); // Remove splash after fade
-      document.getElementById('mainContent').style.display = 'block';
-    }, 3000); // 3 seconds splash
-  });
+ function enterSite() {
+  const splash = document.getElementById('splash');
+  splash.style.opacity = '0';
+  setTimeout(() => { splash.style.display = 'none'; }, 1000); 
+  document.getElementById('mainContent').style.display = 'block';
+}
 </script>
 
 </body>
